welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: Missing closing brace `}' assumed here
def Brosse(){
^FlowerPot:1: error: expected class or object definition
def Brosse(){
^FlowerPot:8: error: expected class or object definition
def fleur(c:Color) {
^FlowerPot:16: error: expected class or object definition
def jardin() {
^